--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "E-commerce API REST with TS, Express, TypeORM, MySQL and Docker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/server.js",
+    "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\""
   },
   "author": "Eric Rodriguez <feric.rodriguez@gmail.com>",
   "license": "MIT",
