--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/server.js",
-    "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+    "start:dev": "rm -r ./dist && tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "start:test": "NODE_ENV=test npm run start:dev",
-    "start:prod": "NODE_ENV=production npm start"
+    "start:prod": "NODE_ENV=production npm start",
+    "typeorm": "typeorm-ts-node-esm -d ./src/config/data.source.ts",
+    "m:gen": "npm run typeorm migration:generate",
+    "m:run": "npm run typeorm migration:run"
   },
   "author": "Eric Rodriguez <feric.rodriguez@gmail.com>",
   "license": "MIT",
@@ -17,7 +20,9 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
@@ -27,6 +32,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.1.6"
