--- a/package.json
+++ b/package.json
@@ -16,22 +16,32 @@
   "author": "Eric Rodriguez <feric.rodriguez@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@types/passport-jwt": "^3.0.9",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
